Istio-ws-async/service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-async-app
  labels:
    app: ws-async-app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: ws-async-app
