Istio-ws-async/egress-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-egressgateway-ws-async
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: ws-async
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 443
            tls:
              mode: ISTIO_MUTUAL
              sni: minishift.host
