Istio-ws-async/egress-ServiceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ws-async-app
spec:
  hosts:
    - minishift.host
  ports:
    - number: 8082
      name: http
      protocol: HTTP
  resolution: DNS
