Istio-ws-async/ingress-DestinationRule.yaml
# Restrict max pool connections for all traffic routed to "ws-async-app.prod.svc.cluster.local"
# Если в кластере используется mTLS то нужно обязвтельно явно указать в DR.  нашем примере mTLS используется.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ws-async-through-ingress-gateway
spec:
  host: ws-async-app.soap-ws-async.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
#    connectionPool:
#      tcp:
#        maxConnections: 1
#      http:
#        maxRetries: 3
#        http1MaxPendingRequests: 1
#        maxRequestsPerConnection: 10
  subsets:
    - name: privileged
      labels:
        version: v1
      trafficPolicy:
        tls:
          mode: ISTIO_MUTUAL
        connectionPool:
          tcp:
            maxConnections: 10
          http:
            http1MaxPendingRequests: 10
#            maxRequestsPerConnection: 1
    - name: regular
      labels:
        version: v1
      trafficPolicy:
        tls:
          mode: ISTIO_MUTUAL
        connectionPool:
          tcp:
            maxConnections: 1
          http:
            http1MaxPendingRequests: 1
#            maxRequestsPerConnection: 1
