Istio-ws-async/ingress-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws-async-through-ingress-gateway
spec:
  hosts:
    - "*" # Внешний Hostname вашего сервиса (Внешнее DNS имя)
  gateways:
    - istio-ingressgateway-ws-async
#    - mesh
  http:
    - match:
        - uri:
            prefix: /ws
#          authority: #authority is used as workaround because of PORT presence in Host
#            prefix: "ws-async-app"
      route:
        - destination:
            port:
              number: 8080
            host: ws-async-app
            subset: regular
    - match:
#        - sourceLabels:
#            cpool: client-privileged
        - uri:
            prefix: /ws1
      #          authority: #authority is used as workaround because of PORT presence in Host
      #            prefix: "ws-async-app"
      route:
        - destination:
            port:
              number: 8080
            host: ws-async-app
            subset: privileged
